--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.12.0",
-    "sanitize.css": "^12.0.1"
+    "sanitize.css": "^12.0.1",
+    "smooth-scrollbar": "^8.5.3"
   }
 }
