--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rimraf public",
     "serve:webpack": "webpack --watch",
-    "serve:eleventy": "eleventy --serve --config=eleventy.js",
+    "serve:eleventy": "eleventy --serve",
     "serve": "APP_ENV=development npm-run-all clean --parallel serve:* --silent",
     "optimize:images": "node .imageminrc",
     "optimize:precompress": "sh .precompress.sh",
@@ -15,7 +15,7 @@
     "lint:js": "eslint src/**/*.js",
     "lint": "run-s lint:*",
     "build:webpack": "webpack",
-    "build:eleventy": "eleventy --config=eleventy.js",
+    "build:eleventy": "eleventy",
     "build": "APP_ENV=production run-s clean build:* optimize:* --silent"
   },
   "engines": {
@@ -56,7 +56,6 @@
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-closure-elimination": "^1.3.2",
     "babel-plugin-groundskeeper-willie": "^1.3.2",
-    "babel-plugin-loop-optimizer": "^1.4.1",
     "babel-plugin-object-to-json-parse": "^0.2.1",
     "babel-plugin-wildcard": "^6.0.0",
     "babel-preset-optimizations": "^2.0.0",
