--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.12.0",
+    "animejs": "^3.2.1",
     "sanitize.css": "^12.0.1",
     "smooth-scrollbar": "^8.5.3"
   }
