--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ APP_TITLE_DIVIDER = '—'
 APP_AUTHOR = 'Benjamin Dos Santos'
 APP_BASE_URL = 'https://benjamindossantos.be'
 APP_COLOR = '#fff'
-APP_FAVICON = 'favicon.png'
+APP_FAVICON = 'favicon.svg'
 APP_WEBP = false
