--- a/src/views/data/projects.json
+++ b/src/views/data/projects.json
@@ -1,25 +1,25 @@
 [
   {
     "name": "ConstanteSans",
-    "url": "https://projects.benjamindossantos.be/constantesans",
+    "url": "https://constantesans.benjamindossantos.be/",
     "description": "Experimental work using physical datas & variable fonts",
     "date": "June 2020"
   },
   {
     "name": "Impact environnemental du cycle de vie des plastiques",
-    "url": "https://projects.benjamindossantos.be/impact-environnemental-du-cycle-de-vie-des-plastiques",
+    "url": "https://impact-environnemental-plastique.benjamindossantos.be/",
     "description": "Datavisualizations about plastic pollution",
     "date": "June 2019"
   },
   {
     "name": "Rethinking User Experience — Twitter",
-    "url": "https://projects.benjamindossantos.be/rethinking-user-experience",
+    "url": "https://rethinking-user-experience.benjamindossantos.be/",
     "description": "Case study on subscription feature improvement",
     "date": "January 2019"
   },
   {
     "name": "The Internet of Natural Things",
-    "url": "https://projects.benjamindossantos.be/the-internet-of-natural-things",
+    "url": "https://the-internet-of-natural-things.benjamindossantos.be/",
     "description": "Simon Collison conference report",
     "date": "January 2019"
   }
