Update content on home

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_TITLE = 'Digital Designer & Frontend Developer'
+APP_TITLE = 'Digital Designer & Front-End Developer'
 APP_SHORT_TITLE = 'DOSBENJAMIN'
 APP_TITLE_DIVIDER = '—'
 APP_AUTHOR = 'Benjamin Dos Santos'
